update query_eval to use real data and usages from doco

--- a/data/pandas_tute/eval_query/query_eval.ipynb
+++ b/data/pandas_tute/eval_query/query_eval.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from scipy import stats\n"
    ]
   },
   {
@@ -18,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 3)\n"
+      "(891, 15)\n"
      ]
     },
     {
@@ -42,46 +46,52 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alive</th>\n",
+       "      <th>alone</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   A  B   C\n",
-       "0  1  5   9\n",
-       "1  2  6  10\n",
-       "2  3  7  11\n",
-       "3  4  8  12"
+       "   survived  pclass   sex   age  sibsp  parch  fare embarked  class  who  \\\n",
+       "0         0       3  male  22.0      1      0  7.25        S  Third  man   \n",
+       "\n",
+       "   adult_male deck  embark_town alive  alone  \n",
+       "0        True  NaN  Southampton    no  False  "
       ]
      },
      "execution_count": 8,
@@ -90,21 +100,21 @@
     }
    ],
    "source": [
-    "\n",
-    "# Sample DataFrame\n",
-    "data = {\n",
-    "    'A': [1, 2, 3, 4],\n",
-    "    'B': [5, 6, 7, 8],\n",
-    "    'C': [9, 10, 11, 12]\n",
-    "}\n",
-    "df = pd.DataFrame(data)\n",
+    "df = pd.read_csv('../../toydata/titanic.csv')\n",
     "print(f\"{df.shape}\")\n",
-    "df.head()\n"
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### arith, math funcs \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -128,165 +138,127 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alive</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>log_fare</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.981001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   A  B   C   D\n",
-       "0  1  5   9  15\n",
-       "1  2  6  10  18\n",
-       "2  3  7  11  21\n",
-       "3  4  8  12  24"
+       "   survived  pclass   sex   age  sibsp  parch  fare embarked  class  who  \\\n",
+       "0         0       3  male  22.0      1      0  7.25        S  Third  man   \n",
+       "\n",
+       "   adult_male deck  embark_town alive  alone  log_fare  \n",
+       "0        True  NaN  Southampton    no  False  1.981001  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Example 1: Create a new column based on an expression\n",
-    "df.eval('D = A + B + C', inplace=True)\n",
-    "df\n"
+    "idx = df.eval('fare != 0')\n",
+    "df.loc[idx, 'log_fare'] = df.loc[idx, :].eval('log(fare)')\n",
+    "df.head(1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A  B   C   D\n",
-       "1  2  6  10  18\n",
-       "2  3  7  11  21\n",
-       "3  4  8  12  24"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Example 2: Filter rows based on an expression\n",
-    "filtered_df = df[df.eval('A + B > 7')]\n",
-    "filtered_df\n"
+    "### filter via boolean, compare \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    -4\n",
-       "1     2\n",
-       "2    10\n",
-       "3    20\n",
-       "dtype: int64"
+       "(216, 16)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Example 3: Use eval to perform arithmetic operations\n",
-    "result = df.eval('A * B - C')\n",
-    "result"
+    "df[df.eval(\"pclass == 1\")].shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(644, 16)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.eval(\"embark_town == 'Southampton'\")].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
