--- a/data/analysis/category_summary.ipynb
+++ b/data/analysis/category_summary.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../toydata/titanic.csv')\n",
+    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
@@ -116,13 +116,29 @@
     "    if order:\n",
     "        _ = _.loc[order]\n",
     "    _ = pd.DataFrame(_)\n",
-    "    _[\"Distribution %\"] = (_ / _.sum()*100).round(2)\n",
+    "    _[\"Distribution %\"] = (_ / _.sum() * 100).round(2)\n",
     "\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(15, 5))\n",
-    "    _.plot(kind='bar', y=\"count\", title=f'{col} Distribution', xlabel=col, ylabel='Frequency', ax=ax[0], rot=rot)\n",
-    "    _.plot(kind='bar', y=\"Distribution %\", title=f'{col} Distribution %', xlabel=col, ylabel='%', ax=ax[1], rot=rot)\n",
+    "    _.plot(\n",
+    "        kind=\"bar\",\n",
+    "        y=\"count\",\n",
+    "        title=f\"{col} Distribution\",\n",
+    "        xlabel=col,\n",
+    "        ylabel=\"Frequency\",\n",
+    "        ax=ax[0],\n",
+    "        rot=rot,\n",
+    "    )\n",
+    "    _.plot(\n",
+    "        kind=\"bar\",\n",
+    "        y=\"Distribution %\",\n",
+    "        title=f\"{col} Distribution %\",\n",
+    "        xlabel=col,\n",
+    "        ylabel=\"%\",\n",
+    "        ax=ax[1],\n",
+    "        rot=rot,\n",
+    "    )\n",
     "\n",
-    "    return _\n"
+    "    return _"
    ]
   },
   {
@@ -204,7 +220,7 @@
     }
    ],
    "source": [
-    "category_summary(df, 'who', rot=0)"
+    "category_summary(df, \"who\", rot=0)"
    ]
   }
  ],
