--- a/data/analysis/dq_checks.ipynb
+++ b/data/analysis/dq_checks.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../toydata/titanic.csv')\n",
+    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
@@ -261,7 +261,15 @@
     }
    ],
    "source": [
-    "df.select_dtypes(include=['number']).describe(percentiles=[.01, .25, .5, .75,.99,])"
+    "df.select_dtypes(include=[\"number\"]).describe(\n",
+    "    percentiles=[\n",
+    "        0.01,\n",
+    "        0.25,\n",
+    "        0.5,\n",
+    "        0.75,\n",
+    "        0.99,\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -358,7 +366,7 @@
     }
    ],
    "source": [
-    "df.select_dtypes(include=['object']).describe()"
+    "df.select_dtypes(include=[\"object\"]).describe()"
    ]
   },
   {
@@ -375,11 +383,22 @@
    "outputs": [],
    "source": [
     "n_nulls = df.isnull().sum()\n",
-    "n_zero = df.apply(lambda x:x==0).sum()\n",
-    "n_negative = df.select_dtypes(include=\"number\").apply(lambda x:x<0).sum()\n",
-    "n_blank_str = df.select_dtypes(include=object).apply(lambda x:x.str.strip()==\"\").sum()\n",
-    "df_sums = pd.DataFrame({'n_missing':n_nulls, 'n_zero':n_zero, 'n_negative':n_negative, 'n_blank_string':n_blank_str})\n",
-    "df_sums_pct = df_sums.div(df.shape[0]).mul(100).round(2).rename(columns=lambda x: x+'_pct')"
+    "n_zero = df.apply(lambda x: x == 0).sum()\n",
+    "n_negative = df.select_dtypes(include=\"number\").apply(lambda x: x < 0).sum()\n",
+    "n_blank_str = (\n",
+    "    df.select_dtypes(include=object).apply(lambda x: x.str.strip() == \"\").sum()\n",
+    ")\n",
+    "df_sums = pd.DataFrame(\n",
+    "    {\n",
+    "        \"n_missing\": n_nulls,\n",
+    "        \"n_zero\": n_zero,\n",
+    "        \"n_negative\": n_negative,\n",
+    "        \"n_blank_string\": n_blank_str,\n",
+    "    }\n",
+    ")\n",
+    "df_sums_pct = (\n",
+    "    df_sums.div(df.shape[0]).mul(100).round(2).rename(columns=lambda x: x + \"_pct\")\n",
+    ")"
    ]
   },
   {
@@ -550,7 +569,7 @@
    ],
    "source": [
     "_ = df_sums.astype(str)\n",
-    "_ = _.replace(\"nan\", '').replace(\"NaN\", '')\n",
+    "_ = _.replace(\"nan\", \"\").replace(\"NaN\", \"\")\n",
     "_"
    ]
   },
@@ -722,7 +741,7 @@
    ],
    "source": [
     "_ = df_sums_pct.astype(str)\n",
-    "_ = _.replace(\"nan\", '').replace(\"NaN\", '')\n",
+    "_ = _.replace(\"nan\", \"\").replace(\"NaN\", \"\")\n",
     "_"
    ]
   }
