--- a/data/analysis/histogram.ipynb
+++ b/data/analysis/histogram.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../toydata/titanic.csv')\n",
+    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
@@ -114,10 +114,10 @@
     "def histogram_summary(histogram, col_name):\n",
     "\n",
     "    _ = histogram\n",
-    "    _ = pd.DataFrame({\"greater_or_eq\":_[1][:-1], \"less_than\":_[1][1:], \"count\":_[0]})\n",
-    "    _[\"Distribution %\"] = (_[\"count\"] / _[\"count\"].sum()*100).round(2)\n",
+    "    _ = pd.DataFrame({\"greater_or_eq\": _[1][:-1], \"less_than\": _[1][1:], \"count\": _[0]})\n",
+    "    _[\"Distribution %\"] = (_[\"count\"] / _[\"count\"].sum() * 100).round(2)\n",
     "\n",
-    "    fig, ax = plt.subplots(1,2, figsize=(15,5))\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(15, 5))\n",
     "    x_ticks = [f\"[{_.greater_or_eq[i]:.2f}-{_.less_than[i]:.2f})\" for i in _.index]\n",
     "\n",
     "    ax[0].bar(_.index, _[\"count\"])\n",
@@ -135,7 +135,7 @@
     "    ax[1].set_title(f\"Histogram of {col_name} %\")\n",
     "\n",
     "    plt.show()\n",
-    "    return _\n"
+    "    return _"
    ]
   },
   {
