--- a/data/analysis/uniqueness_checks.ipynb
+++ b/data/analysis/uniqueness_checks.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../toydata/titanic.csv')\n",
+    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
