--- a/data/analysis/interaction.ipynb
+++ b/data/analysis/interaction.ipynb
@@ -412,7 +412,7 @@
    ],
    "source": [
     "_.pivot(index=\"age_binned\", columns=\"fare_binned\", values=\"count\").round(2).style.map(\n",
-    "    lambda v: \"background-color:darkred;\" if v < _[\"count\"].sum()/len(_) else None\n",
+    "    lambda v: \"background-color:darkred;\" if v < _[\"count\"].sum() / len(_) else None\n",
     ")"
    ]
   },
@@ -601,7 +601,7 @@
    ],
    "source": [
     "_.pivot(index=\"age_binned\", columns=\"fare_binned\", values=\"fare\").round(2).style.map(\n",
-    "    lambda v: \"background-color:darkred;\" if v < _[\"fare\"].sum()/len(_) else None\n",
+    "    lambda v: \"background-color:darkred;\" if v < _[\"fare\"].sum() / len(_) else None\n",
     ")"
    ]
   },
@@ -705,7 +705,9 @@
     }
    ],
    "source": [
-    "_2 = _.pivot(index=\"age_binned\", columns=\"fare_binned\", values=\"survived_fare_rate\").round(2)\n",
+    "_2 = _.pivot(\n",
+    "    index=\"age_binned\", columns=\"fare_binned\", values=\"survived_fare_rate\"\n",
+    ").round(2)\n",
     "_2.style.background_gradient(cmap=\"RdYlGn\")"
    ]
   }
