add some programming exceptions

--- a/generics/errors_and_exceptions/built_in_errors.ipynb
+++ b/generics/errors_and_exceptions/built_in_errors.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# common Level 1 exception classes in Python\n",
     "exceptions = [\n",
+    "    # programming related\n",
+    "    NameError,\n",
+    "    SyntaxError,\n",
     "    # math related\n",
     "    ArithmeticError,\n",
     "    # method and attribute related\n",
@@ -119,6 +122,45 @@
     "    TypeError,\n",
     "    ValueError\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NameError: name 'a' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a  \n",
+    "except NameError as e:\n",
+    "    print(f\"NameError: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2049034589.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in1 a:\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in1 a:\n",
+    "    print(i)"
    ]
   },
   {
