add contents section

--- a/generics/errors_and_exceptions/exceptions_basics.ipynb
+++ b/generics/errors_and_exceptions/exceptions_basics.ipynb
@@ -4,9 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### exceptions\n",
+    "Contents\n",
+    "- Examples\n",
+    "- Try except\n",
+    "- re-raising\n",
+    "- chaining"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples\n",
     "\n",
-    "Errors detected during execution, as opposed to compile-time errors."
+    "Exceptions: Errors detected during execution, as opposed to compile-time errors."
    ]
   },
   {
