--- a/generics/errors_and_exceptions/debugging_workflow.ipynb
+++ b/generics/errors_and_exceptions/debugging_workflow.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "1. **find the possible location of the error**: Look at the traceback to find the line number and file where the error occurred.\n",
     "2. **use pdb to interactively explore and try to understand the problem**: \n",
-    "    - set a breakpoint using `pdb.set_trace()`\n",
+    "    - set a breakpoint using `import pdb;pdb.set_trace()`\n",
     "    - Use commands like `h` for help, `b` to set breakpoints, `s` to step into functions, and `c` to continue execution until the next breakpoint.\n",
     "    - Use `l` to list the current location in the code, `n` to step to the next line, and `p` or `pp` to print variables.\n",
     "    - Use `q` to quit the debugger.\n",
