minor docu update

--- a/generics/errors_and_exceptions/custom_errors.ipynb
+++ b/generics/errors_and_exceptions/custom_errors.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# custom exceptions for\n",
+    "- numpy\n",
+    "- pandas\n",
+    "- requests\n",
+    "- sqlite3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Custom Exception\n"
    ]
   },
