--- a/web/retries/retry_with_exp_backoff.ipynb
+++ b/web/retries/retry_with_exp_backoff.ipynb
@@ -14,74 +14,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb493fa0",
-   "metadata": {},
-   "source": [
-    "### exponential backoff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b782a35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MaxRetriesExceeded(Exception):\n",
-    "    pass\n",
-    "\n",
-    "def make_request_with_backoff(url, max_retries=3, base_delay=1):\n",
-    "    \"\"\"\n",
-    "    Makes a request to the given URL with exponential backoff on failure.\n",
-    "    \"\"\"\n",
-    "    attempt = 1\n",
-    "    while True:\n",
-    "        try:\n",
-    "            response = requests.get(url)\n",
-    "            response.raise_for_status()\n",
-    "            return response\n",
-    "        except requests.exceptions.RequestException as e:\n",
-    "            \n",
-    "            # terminating condition\n",
-    "            if attempt >= max_retries:\n",
-    "                logger.warning(f\"Request failed: {e}, Max retries {max_retries} exceeded.\")\n",
-    "                raise MaxRetriesExceeded(f\"Max retries exceeded for URL: {url}\") from e\n",
-    "            \n",
-    "            # processing logic\n",
-    "            delay = base_delay * (2 ** (attempt - 1))  # Exponential backoff\n",
-    "            logger.warning(f\"Request failed: {e}, wait for {delay} seconds...\")\n",
-    "            time.sleep(delay)\n",
-    "        \n",
-    "        attempt += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c94ccd3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-04-22 23:06:15.105\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m20\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, wait for 2 seconds...\u001b[0m\n",
-      "\u001b[32m2025-04-22 23:06:23.502\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m20\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, wait for 4 seconds...\u001b[0m\n",
-      "\u001b[32m2025-04-22 23:06:29.751\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, Max retries 3 exceeded.\u001b[0m\n",
-      "\u001b[32m2025-04-22 23:06:29.753\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m5\u001b[0m - \u001b[31m\u001b[1mMax retries exceeded for URL: https://httpbin.org/status/429\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_url = \"https://httpbin.org/status/429\"  # Simulates rate-limiting\n",
-    "try:\n",
-    "    response = make_request_with_backoff(test_url, max_retries=3, base_delay=2)\n",
-    "except MaxRetriesExceeded as e:\n",
-    "    logger.error(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e85ed436",
    "metadata": {},
    "source": [
@@ -90,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "14348a55",
    "metadata": {},
    "outputs": [],
@@ -115,12 +47,11 @@
     "                try:\n",
     "                    return func(*args, **kwargs)\n",
     "                except Exception as e:\n",
-    "                    if attempt == max_retries:# Terminating condition \n",
+    "                    if attempt == max_retries:\n",
     "                        logger.warning(f\"{func.__name__} failed: {e}, reached max retries\")\n",
     "                        raise MaxRetriesExceeded(f\"Max retries {max_retries} exceeded for {func.__name__}\")\n",
     "                    else:\n",
-    "                        # Processing logic\n",
-    "                        delay = base_delay * (2 ** (attempt - 1))  # Exponential backoff\n",
+    "                        delay = base_delay * (2 ** (attempt - 1))\n",
     "                        logger.warning(f\"{func.__name__} failed: {e}, will retry in {delay} seconds...\")\n",
     "                        time.sleep(delay)\n",
     "                \n",
@@ -182,6 +113,71 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8be1aeef",
+   "metadata": {},
+   "source": [
+    "### non decorator example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573d07d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MaxRetriesExceeded(Exception):\n",
+    "    pass\n",
+    "\n",
+    "def make_request_with_backoff(url, max_retries=3, base_delay=1):\n",
+    "    \"\"\"\n",
+    "    Makes a request to the given URL with exponential backoff on failure.\n",
+    "    \"\"\"\n",
+    "    attempt = 1\n",
+    "    while True:\n",
+    "        try:\n",
+    "            response = requests.get(url)\n",
+    "            response.raise_for_status()\n",
+    "            return response\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            if attempt >= max_retries:\n",
+    "                logger.warning(f\"Request failed: {e}, Max retries {max_retries} exceeded.\")\n",
+    "                raise MaxRetriesExceeded(f\"Max retries exceeded for URL: {url}\") from e\n",
+    "            else:\n",
+    "                delay = base_delay * (2 ** (attempt - 1))  # Exponential backoff\n",
+    "                logger.warning(f\"Request failed: {e}, wait for {delay} seconds...\")\n",
+    "                time.sleep(delay)\n",
+    "        \n",
+    "        attempt += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e32cee06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-04-22 23:06:15.105\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m20\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, wait for 2 seconds...\u001b[0m\n",
+      "\u001b[32m2025-04-22 23:06:23.502\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m20\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, wait for 4 seconds...\u001b[0m\n",
+      "\u001b[32m2025-04-22 23:06:29.751\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmake_request_with_backoff\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mRequest failed: 429 Client Error: TOO MANY REQUESTS for url: https://httpbin.org/status/429, Max retries 3 exceeded.\u001b[0m\n",
+      "\u001b[32m2025-04-22 23:06:29.753\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m5\u001b[0m - \u001b[31m\u001b[1mMax retries exceeded for URL: https://httpbin.org/status/429\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_url = \"https://httpbin.org/status/429\"  # Simulates rate-limiting\n",
+    "try:\n",
+    "    response = make_request_with_backoff(test_url, max_retries=3, base_delay=2)\n",
+    "except MaxRetriesExceeded as e:\n",
+    "    logger.error(e)"
+   ]
   },
   {
    "cell_type": "code",
