--- a/web/retries/retry_n_times.ipynb
+++ b/web/retries/retry_n_times.ipynb
@@ -20,12 +20,15 @@
     "from loguru import logger\n",
     "from typing import Callable, Any, Optional\n",
     "\n",
+    "\n",
     "class MaxRetriesExceeded(Exception):\n",
     "    pass\n",
     "\n",
+    "\n",
     "# request\n",
     "def try_n_times(\n",
-    "    max_retries: int = 3, delay = 1, \n",
+    "    max_retries: int = 3,\n",
+    "    delay=1,\n",
     "):\n",
     "    \"\"\"\n",
     "    Try to run a func for n times with pauses in between runs\n",
@@ -38,19 +41,23 @@
     "                try:\n",
     "                    return func(*args, **kwargs)\n",
     "                except Exception as e:\n",
-    "                    if _ == max_retries - 1: # terminal case\n",
-    "                        logger.warning(f\"{func.__name__} failed with error: {e}, reached max retries\")\n",
+    "                    if _ == max_retries - 1:  # terminal case\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed with error: {e}, reached max retries\"\n",
+    "                        )\n",
     "                    else:\n",
     "                        # processing logic\n",
-    "                        logger.warning(f\"{func.__name__} failed with error: {e}, will retry in {delay} seconds...\")\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed with error: {e}, will retry in {delay} seconds...\"\n",
+    "                        )\n",
     "                        time.sleep(delay)\n",
     "            raise MaxRetriesExceeded(\n",
-    "                            f\"Max retries {max_retries} exceeded for {func.__name__}\"\n",
-    "                        )\n",
+    "                f\"Max retries {max_retries} exceeded for {func.__name__}\"\n",
+    "            )\n",
+    "\n",
     "        return new_func\n",
     "\n",
-    "    return decorate\n",
-    "\n"
+    "    return decorate"
    ]
   },
   {
@@ -67,7 +74,7 @@
     "    \"\"\"\n",
     "    if x <= 5:\n",
     "        raise ValueError(\"x must be greater than 5\")\n",
-    "    return f\"Success with x = {x}\"\n"
+    "    return f\"Success with x = {x}\""
    ]
   },
   {
@@ -88,7 +95,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Test case 2: Function fails and returns fallback value\n",
     "try:\n",
     "    result = unreliable_function(4)\n",
