--- a/web/retries/retry_till_timeout.ipynb
+++ b/web/retries/retry_till_timeout.ipynb
@@ -20,6 +20,7 @@
     "from loguru import logger\n",
     "from typing import Callable, Any, Optional\n",
     "\n",
+    "\n",
     "# timer class\n",
     "class Timer:\n",
     "    def __init__(self, timeout: int = 5):\n",
@@ -33,11 +34,12 @@
     "class MaxRetriesExceeded(Exception):\n",
     "    pass\n",
     "\n",
+    "\n",
     "def retry_till_timeout(\n",
-    "    delay = 1, timeout = 10,\n",
+    "    delay=1,\n",
+    "    timeout=10,\n",
     "):\n",
-    "    \"\"\"retry until time out\n",
-    "    \"\"\"\n",
+    "    \"\"\"retry until time out\"\"\"\n",
     "\n",
     "    def decorate(func):\n",
     "        @functools.wraps(func)\n",
@@ -48,16 +50,21 @@
     "                    return func(*args, **kwargs)\n",
     "                except Exception as e:\n",
     "                    if timer.is_timeout():\n",
-    "                        logger.warning(f\"{func.__name__} failed with error: {e}, reached timeout\")\n",
-    "                        raise MaxRetriesExceeded(f\"Timeout {timeout} sec reached for {func.__name__}\")\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed with error: {e}, reached timeout\"\n",
+    "                        )\n",
+    "                        raise MaxRetriesExceeded(\n",
+    "                            f\"Timeout {timeout} sec reached for {func.__name__}\"\n",
+    "                        )\n",
     "                    else:\n",
-    "                        logger.warning(f\"{func.__name__} failed with error: {e}, will retry in {delay} seconds...\")\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed with error: {e}, will retry in {delay} seconds...\"\n",
+    "                        )\n",
     "                        time.sleep(delay)\n",
     "\n",
     "        return new_func\n",
     "\n",
-    "    return decorate\n",
-    "\n"
+    "    return decorate"
    ]
   },
   {
@@ -83,6 +90,7 @@
    "source": [
     "import requests\n",
     "\n",
+    "\n",
     "# Example usage\n",
     "@retry_till_timeout(delay=1, timeout=10)\n",
     "def make_request(url):\n",
@@ -92,6 +100,7 @@
     "    response = requests.get(url)\n",
     "    response.raise_for_status()\n",
     "    return response\n",
+    "\n",
     "\n",
     "test_url = \"https://httpbin.org/status/429\"  # Simulates rate-limiting\n",
     "try:\n",
@@ -126,6 +135,7 @@
    "source": [
     "import time\n",
     "\n",
+    "\n",
     "# timer class\n",
     "class Timer:\n",
     "    def __init__(self, timeout: int = 5):\n",
@@ -142,7 +152,7 @@
     "        return (time.time() - self.start_time) > self.timeout\n",
     "\n",
     "    def elapsed_time(self) -> float:\n",
-    "        return round(time.time() - self.start_time,2)\n"
+    "        return round(time.time() - self.start_time, 2)"
    ]
   },
   {
@@ -152,7 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# test\n",
     "timer = Timer(3)\n",
     "time.sleep(2)\n",
