--- a/web/retries/retry_with_exp_backoff.ipynb
+++ b/web/retries/retry_with_exp_backoff.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import time\n",
     "import requests\n",
-    "from loguru import logger\n"
+    "from loguru import logger"
    ]
   },
   {
@@ -32,13 +32,16 @@
     "from loguru import logger\n",
     "from functools import wraps\n",
     "\n",
+    "\n",
     "class MaxRetriesExceeded(Exception):\n",
     "    pass\n",
+    "\n",
     "\n",
     "def with_exponential_backoff(max_retries=3, base_delay=1):\n",
     "    \"\"\"\n",
     "    A decorator to apply exponential backoff to any function.\n",
     "    \"\"\"\n",
+    "\n",
     "    def decorator(func):\n",
     "        @wraps(func)\n",
     "        def wrapper(*args, **kwargs):\n",
@@ -48,17 +51,24 @@
     "                    return func(*args, **kwargs)\n",
     "                except Exception as e:\n",
     "                    if attempt == max_retries:\n",
-    "                        logger.warning(f\"{func.__name__} failed: {e}, reached max retries\")\n",
-    "                        raise MaxRetriesExceeded(f\"Max retries {max_retries} exceeded for {func.__name__}\")\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed: {e}, reached max retries\"\n",
+    "                        )\n",
+    "                        raise MaxRetriesExceeded(\n",
+    "                            f\"Max retries {max_retries} exceeded for {func.__name__}\"\n",
+    "                        )\n",
     "                    else:\n",
     "                        delay = base_delay * (2 ** (attempt - 1))\n",
-    "                        logger.warning(f\"{func.__name__} failed: {e}, will retry in {delay} seconds...\")\n",
+    "                        logger.warning(\n",
+    "                            f\"{func.__name__} failed: {e}, will retry in {delay} seconds...\"\n",
+    "                        )\n",
     "                        time.sleep(delay)\n",
-    "                \n",
+    "\n",
     "                attempt += 1\n",
     "\n",
     "        return wrapper\n",
-    "    return decorator\n"
+    "\n",
+    "    return decorator"
    ]
   },
   {
@@ -79,7 +89,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Example usage\n",
     "@with_exponential_backoff(max_retries=3, base_delay=2)\n",
     "def make_request(url):\n",
@@ -89,6 +98,7 @@
     "    response = requests.get(url)\n",
     "    response.raise_for_status()\n",
     "    return response\n",
+    "\n",
     "\n",
     "test_url = \"https://httpbin.org/status/429\"  # Simulates rate-limiting\n",
     "try:\n",
@@ -132,6 +142,7 @@
     "class MaxRetriesExceeded(Exception):\n",
     "    pass\n",
     "\n",
+    "\n",
     "def make_request_with_backoff(url, max_retries=3, base_delay=1):\n",
     "    \"\"\"\n",
     "    Makes a request to the given URL with exponential backoff on failure.\n",
@@ -144,14 +155,16 @@
     "            return response\n",
     "        except requests.exceptions.RequestException as e:\n",
     "            if attempt >= max_retries:\n",
-    "                logger.warning(f\"Request failed: {e}, Max retries {max_retries} exceeded.\")\n",
+    "                logger.warning(\n",
+    "                    f\"Request failed: {e}, Max retries {max_retries} exceeded.\"\n",
+    "                )\n",
     "                raise MaxRetriesExceeded(f\"Max retries exceeded for URL: {url}\") from e\n",
     "            else:\n",
     "                delay = base_delay * (2 ** (attempt - 1))  # Exponential backoff\n",
     "                logger.warning(f\"Request failed: {e}, wait for {delay} seconds...\")\n",
     "                time.sleep(delay)\n",
-    "        \n",
-    "        attempt += 1\n"
+    "\n",
+    "        attempt += 1"
    ]
   },
   {
