add aiohttp and httpx example

--- a/web/download/requests_example.ipynb
+++ b/web/download/requests_example.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,10 @@
     "    print(f\"{response.headers['content-type'] = }, {response.encoding = }\")\n",
     "\n",
     "    # save the file\n",
-    "    with open(local_location / local_name, \"wb\") as f:\n",
+    "    file_path = local_location / local_name\n",
+    "    with open(file_path, \"wb\") as f:\n",
     "        f.write(response.content)\n",
-    "        print(f\"Saved to {local_location / local_name}\")\n"
+    "        print(f\"Saved to {file_path}\")\n"
    ]
   },
   {
